@@ -8,6 +8,7 @@ from . import views
 from .views_login import flashsale_login
 from .views_address import AddressList,UserAddressDetail,DistrictList
 from .views_refund import RefundApply,RefundConfirm
+from .views_product import productsku_quantity_view
 
 urlpatterns = (
     url(r'^charge/$', csrf_exempt(views.PINGPPChargeView.as_view())),
@@ -17,8 +18,12 @@ urlpatterns = (
     #############product urls############
     url(r'^wxwarn/$', csrf_exempt(views.WXPayWarnView.as_view())),
     
-    url(r'^plist/$', cache_page(views.ProductList.as_view(),4*60*60),name="sale_home"),
+    url(r'^plist/$', 
+#         cache_page(views.ProductList.as_view(),4*60*60),
+        views.ProductList.as_view(),
+        name="sale_home"),
     url(r'^p/(?P<pk>[0-9]+)/$', views.ProductDetail.as_view(),name="product_detail"),
+    url(r'^locknum/$', sale_buyer_required(productsku_quantity_view),name="skuquantity_lock"),
     
     ##############order urls################
     url(r'^orderbuy/$',sale_buyer_required(views.OrderBuyReview.as_view())),
