@@ -57,7 +57,8 @@ class ProductdetailInline(admin.StackedInline):
     
     model = Productdetail
     
-    fields = (('head_imgs','content_imgs'),)
+    fields = (('head_imgs','content_imgs')
+              ,('buy_limit','per_limit'))
     
     formfield_overrides = {
         models.CharField: {'widget': TextInput(attrs={'size':'50'})},
