@@ -63,11 +63,11 @@ class Product(models.Model):
     pic_path     = models.CharField(max_length=256,blank=True,verbose_name=u'商品主图')
     
     collect_num  = models.IntegerField(default=0,verbose_name=u'库存数')  #库存数
-    warn_num     = models.IntegerField(null=True,default=0,verbose_name=u'警告数')  #警戒库位
-    remain_num   = models.IntegerField(null=True,default=0,verbose_name=u'预留数')  #预留库存
-    wait_post_num   = models.IntegerField(null=True,default=0,verbose_name=u'待发数')  #待发数
-    sale_num  = models.IntegerField(null=True,default=0,verbose_name=u'日出库数')  #日出库
-    reduce_num   = models.IntegerField(null=True,default=0,verbose_name=u'预减数')  #下次入库减掉这部分库存
+    warn_num     = models.IntegerField(default=0,verbose_name=u'警告数')  #警戒库位
+    remain_num   = models.IntegerField(default=0,verbose_name=u'预留数')  #预留库存
+    wait_post_num   = models.IntegerField(default=0,verbose_name=u'待发数')  #待发数
+    sale_num     = models.IntegerField(default=0,verbose_name=u'日出库数')  #日出库
+    reduce_num   = models.IntegerField(default=0,verbose_name=u'预减数')  #下次入库减掉这部分库存
     
     cost         = models.FloatField(default=0,verbose_name=u'成本价')
     std_purchase_price = models.FloatField(default=0,verbose_name=u'标准进价')
@@ -76,7 +76,7 @@ class Product(models.Model):
     staff_price        = models.FloatField(default=0,verbose_name=u'员工价')
     
     weight       = models.CharField(max_length=10,blank=True,verbose_name=u'重量(g)')
-    
+
     created      = models.DateTimeField(null=True,blank=True,
                                         auto_now_add=True,verbose_name=u'创建时间')
     modified     = models.DateTimeField(null=True,blank=True,
@@ -131,7 +131,6 @@ class Product(models.Model):
     
     @property
     def realnum(self):
-        print 'real num:',self.collect_num ,self.sale_num
         if self.collect_num >= self.sale_num:
             return self.collect_num - self.sale_num
         return 0
@@ -323,12 +322,13 @@ class ProductSku(models.Model):
     barcode  = models.CharField(max_length=64,blank=True,db_index=True,verbose_name='条码')
     product  = models.ForeignKey(Product,null=True,related_name='prod_skus',verbose_name='商品')
     
-    quantity = models.IntegerField(default=0,verbose_name='库存数')
-    warn_num     = models.IntegerField(null=True,default=0,verbose_name='警戒数')    #警戒库位
-    remain_num   = models.IntegerField(null=True,default=0,verbose_name='预留数')    #预留库存
-    wait_post_num = models.IntegerField(null=True,default=0,verbose_name='待发数')    #待发数
-    sale_num      = models.IntegerField(null=True,default=0,verbose_name=u'日出库数')    #日出库
-    reduce_num    = models.IntegerField(null=True,default=0,verbose_name='预减数')    #下次入库减掉这部分库存
+    quantity     = models.IntegerField(default=0,verbose_name='库存数')
+    warn_num     = models.IntegerField(default=0,verbose_name='警戒数')    #警戒库位
+    remain_num   = models.IntegerField(default=0,verbose_name='预留数')    #预留库存
+    wait_post_num = models.IntegerField(default=0,verbose_name='待发数')    #待发数
+    sale_num      = models.IntegerField(default=0,verbose_name=u'日出库数')    #日出库
+    reduce_num    = models.IntegerField(default=0,verbose_name='预减数')    #下次入库减掉这部分库存
+    lock_num      = models.IntegerField(default=0,verbose_name='锁定数')
     
     cost          = models.FloatField(default=0,verbose_name='成本价')
     std_purchase_price = models.FloatField(default=0,verbose_name='标准进价')
@@ -387,6 +387,10 @@ class ProductSku(models.Model):
         return 0
     
     @property
+    def free_num(self):
+        return self.remain_num - self.wait_post_num - self.lock_num
+    
+    @property
     def is_out_stock(self):
         if self.quantity<0 or self.wait_post_num <0 :
             self.quantity      = self.quantity >= 0 and self.quantity or 0
@@ -427,6 +431,8 @@ class ProductSku(models.Model):
                 'districts':sku.get_district_list(),
                 'barcode':sku.BARCODE}
         
+    
+    
     def update_quantity(self,num,full_update=False,dec_update=False):
         """
         更新规格库存
